feat: replace codesandbox with image link

--- a/packages/landingpage/translations/locales/de/getting-started.json
+++ b/packages/landingpage/translations/locales/de/getting-started.json
@@ -1,6 +1,7 @@
 {
   "sandbox": {
     "title": "Suchen Sie nach weiteren Ressourcen?",
-    "description": "Sehen Sie sich gerne auch unsere Beispielprojekte an"
+    "description": "Sehen Sie sich gerne auch unsere Beispielprojekte an",
+    "goto": "Zum Sandbox-Projekt"
   }
 }
