--- a/packages/landingpage/translations/locales/en/getting-started.json
+++ b/packages/landingpage/translations/locales/en/getting-started.json
@@ -1,6 +1,7 @@
 {
   "sandbox": {
     "title": "Looking for more resources?",
-    "description": "Make sure to check out the example projects"
+    "description": "Make sure to check out the example projects",
+    "goto": "Go to the sandbox"
   }
 }
