refactor: add alt and aria text to the locales

--- a/packages/landingpage/translations/locales/en/getting-started.json
+++ b/packages/landingpage/translations/locales/en/getting-started.json
@@ -2,6 +2,8 @@
   "sandbox": {
     "title": "Looking for more resources?",
     "description": "Make sure to check out the example projects",
-    "goto": "Go to the sandbox"
+    "goto": "Go to the sandbox",
+    "alt": "Sandbox for",
+    "aria-label": "Open Sandbox for"
   }
 }
