--- a/packages/landingpage/translations/locales/de/getting-started.json
+++ b/packages/landingpage/translations/locales/de/getting-started.json
@@ -2,6 +2,8 @@
   "sandbox": {
     "title": "Suchen Sie nach weiteren Ressourcen?",
     "description": "Sehen Sie sich gerne auch unsere Beispielprojekte an",
-    "goto": "Zum Sandbox-Projekt"
+    "goto": "Zum Sandbox-Projekt",
+    "alt": "Sandbox-Projekt für",
+    "aria-label": "Öffnen Sie das Sandbox-Projekt für"
   }
 }
