--- a/packages/landingpage/mdx/getting-started/react-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/react-guide.mdx
@@ -31,12 +31,13 @@ import MenuSection from "components/getting-started/menuSection";
     src={`/login-form.png`}
     alt="A screenshot of the login form"
     style={{
+      display: 'block',
       height: 'auto',
       width: '100%',
       maxWidth: '420px',
       borderRadius: '12px',
       boxShadow: '2px 2px 8px 3px rgba(0, 0, 0, 0.14)',
-      margin: '80px 0 0',
+      margin: '60px auto 0',
     }}
   />
 
@@ -47,7 +48,13 @@ import MenuSection from "components/getting-started/menuSection";
 
   ```bash
   npx create-react-app <your app name>
+  ```
+
+  ```bash
   cd <your app name>
+  ```
+
+  ```bash
   npm start
   ```
 
