refactor(landinpage): remove backticks

--- a/packages/landingpage/mdx/getting-started/vue-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/vue-guide.mdx
@@ -9,7 +9,7 @@ import MenuSection from "components/getting-started/menuSection";
   Please follow these steps for integration into Vue.js(>= 3.0.0):
 
 </MenuSection>
-<MenuSection title="Install `@inovex.de/elements-vue`">
+<MenuSection title="Install @inovex.de/elements-vue">
 
   <StepIndicator step="1">Add the package `@inovex.de/elements-vue` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
@@ -68,7 +68,7 @@ import MenuSection from "components/getting-started/menuSection";
   Please follow these steps for integration into Vue.js(2.x.x):
 </MenuSection>
 
-<MenuSection title="Install `@inovex.de/elements`">
+<MenuSection title="Install @inovex.de/elements">
 
   <StepIndicator step="1">Add the package `@inovex.de/elements` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
@@ -111,5 +111,5 @@ import MenuSection from "components/getting-started/menuSection";
 
 <MenuSection title="Use the Components">
 
-  You can now use the components in your Vue.js project in the same way you would use any native HTML element.
+  You can now use the components in your Vue.js 2 project in the same way you would use any native HTML element.
 </MenuSection>
