--- a/packages/landingpage/translations/locales/en/getting-started.json
+++ b/packages/landingpage/translations/locales/en/getting-started.json
@@ -1,9 +1,6 @@
 {
   "sandbox": {
     "title": "Looking for more resources?",
-    "description": "Make sure to check out the example projects",
-    "goto": "Go to the sandbox",
-    "alt": "Sandbox for",
-    "aria-label": "Open Sandbox for"
+    "description": "Make sure to check out the example projects"
   }
 }
