refactor: footer design overhaul
refactor: utilize css grid and create a desktop and mobile version like our header

refactor: optimize media breakpoints

refactor: change footer and nav wording

--- a/packages/landingpage/translations/locales/de/common.json
+++ b/packages/landingpage/translations/locales/de/common.json
@@ -40,7 +40,7 @@
       }
     },
     "getting_started": {
-      "name": "Erste Schritte",
+      "name": "Guides",
       "subroutes": {
         "javascript": {
           "name": "Javascript"
@@ -94,6 +94,7 @@
   "meta": {
     "home": "Home",
     "explore": "Erkunden",
+    "getting_started": "Guides",
     "library": "Bibliothek",
     "about": "Über uns"
   },
