--- a/packages/landingpage/translations/locales/en/common.json
+++ b/packages/landingpage/translations/locales/en/common.json
@@ -40,7 +40,7 @@
       }
     },
     "getting_started": {
-      "name": "getting started",
+      "name": "guides",
       "subroutes": {
         "javascript": {
           "name": "javascript"
@@ -94,6 +94,7 @@
   "meta": {
     "home": "Home",
     "explore": "Explore",
+    "getting_started": "Guides",
     "library": "Library",
     "about": "About"
   },
