--- a/packages/storybook/src/stories/docs/stylesheet.stories.mdx
+++ b/packages/storybook/src/stories/docs/stylesheet.stories.mdx
@@ -8,7 +8,7 @@ we have prepared a global stylesheet for you, which brings the basic styles (hea
 
 You can integrate it by following these simple steps:
 1. Use one of our many packages (elements, elements-react, ...)
-2. Import our stylsheet in your global stylesheet (e.g. like this: `@use '@inovex.de/elements/dist/inovex-elements/inovex-elements.css'`)
+2. Import our stylesheet in your global stylesheet (e.g. like this: `@use '@inovex.de/elements/dist/inovex-elements/inovex-elements.css'`)
 3. Give the body element of your application the class `inovex-elements-typo` to get access to the typography styles or the class `inovex-elements-theme` for using the inovex Elements theme colors.
 
 With `inovex-elements-typo` the following elements now receive the inovex Elements style:
