--- a/packages/landingpage/mdx/getting-started/angular-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/angular-guide.mdx
@@ -47,7 +47,7 @@ Add the following to your build assets (`projects.<your-project-name>.architect.
 
 The components we provide in the Angular project are wrapped in Angular directives within an Angular library.
 All the `@Input` properties and `@Output` events of our components are included.
-This allows your IDE and compiler to infer all the type information from the given interfaces which is compulsive for code completion to work properly.
+This allows your IDE and compiler to infer all the type information from the given interfaces which is essential for code completion to work properly.
 
 To use the inovex Elements, you need to integrate the `InoElementsModule` into one of your App's modules. To do so, follow these steps:
 
