--- a/packages/landingpage/mdx/getting-started/react-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/react-guide.mdx
@@ -330,7 +330,7 @@ import MenuSection from "components/getting-started/menuSection";
           type="success"
           stay-visible-on-hover="false"
         >
-          Sucessfully logged in
+          Successfully logged in
         </InoSnackbar>
       );
     } else {
