--- a/packages/landingpage/mdx/getting-started/vue-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/vue-guide.mdx
@@ -4,7 +4,7 @@ import MenuSection from "components/getting-started/menuSection";
 
 # Integrate with Vue.js
 
-<MenuSection title="Integratie with Vue.js 3">
+<MenuSection title="Integrate with Vue.js 3">
 
   Please follow these steps for integration into Vue.js(>= 3.0.0):
 
