--- a/packages/landingpage/mdx/getting-started/javascript-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/javascript-guide.mdx
@@ -57,7 +57,7 @@ For most of the websites it should be sufficient to add the tag to the `index.ht
   ```
 </CH.Code>
 
-**Fetching the proper version:** Please note the version number (`8.0.0`) in the url above. This version might not be the latest version in future, so please update it with latest available version number on `elements.inovex.de` during your intial integration.
+**Fetching the proper version:** Please note the version number (`8.0.0`) in the url above. This version might not be the latest version in future, so please update it with latest available version number on `elements.inovex.de` during your initial integration.
 
 
 #### I do not want to pin to a concrete version, do you provide a link to the latest release?
