--- a/packages/storybook/src/stories/docs/framework-integration/javascript-instructions.stories.mdx
+++ b/packages/storybook/src/stories/docs/framework-integration/javascript-instructions.stories.mdx
@@ -60,7 +60,7 @@ To load the components at runtime, you need to insert the following code fragmen
 ></script>
 ```
 
-**Fetching the proper version:** Please note the version number (`5.1.0`) in the url above. This version might not be the latest version in future, so please update it with latest available version number on `elements.inovex.de` during your intial integration. 
+**Fetching the proper version:** Please note the version number (`5.1.0`) in the url above. This version might not be the latest version in future, so please update it with latest available version number on `elements.inovex.de` during your initial integration. 
 
 
 #### I do not want to pin to a concrete version, do you provide a link to the latest release?
