refactor(landingpage): removed german getting started guides (#973)
* Removed german guides; Added conditional disabled state to locale switcher;

* Removed translation from getting started layout

* Replaced iframe with anchor

* refactor(landingpage): add theme to code snippets

* refactor(landingpage): update guides
- add inline code styling
- add code snippet theme
- make StepIndicator bigger for 2 digit numbers
- update javaScript guide with sections & steps
- update angular guide with sections & steps
- update vue guide with sections & steps
-update react for more consistent steps

* refactor(landinpage): remove backticks

* refactor: typos

* refactor: valueChange -> onValueChange

* refactor(landingpage): remove commented style

---------

Co-authored-by: MariaLStefan <103122411+MariaLStefan@users.noreply.github.com>
Co-authored-by: Tobias Heim Galindo <tobisellfy@gmail.com>

--- a/packages/landingpage/mdx/getting-started/angular-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/angular-guide.mdx
@@ -1,11 +1,15 @@
 import {CH} from '@code-hike/mdx/components';
+import MenuSection from "components/getting-started/menuSection";
+import StepIndicator from 'components/getting-started/stepIndicator';
 
 # Integrate with Angular
 
-> We set up a demo project with Angular CLI to show you how to integrate the components into a newly generated Angular project.
-> Scroll down to see the CodeSandbox. These instructions are based on `angular@12.0.0` and [`angular-cli@12.0.0`](https://cli.angular.io/).
+We set up a demo project with Angular CLI to show you how to integrate the components into a newly generated Angular project.
 
-## Install dependency `@inovex.de/elements-angular`
+Scroll down to see the CodeSandbox. These instructions are based on `angular@12.0.0` and [`angular-cli@12.0.0`](https://cli.angular.io/).
+
+<MenuSection title='Preparation'>
+<StepIndicator step='1'>Install dependency `@inovex.de/elements-angular`</StepIndicator>
 
 We provide an integration layer package for Angular, so you can integrate the inovex Elements as an Angular library into your Angular project.
 To install it, you have the following options:
@@ -23,8 +27,8 @@ To install it, you have the following options:
 
 The `ino-icons` will be added to your project automatically if you've used the angular-cli.
 
-If you used npm or yarn to install the inovex Elements, you need to change `angular.json` manually.
-Add the following to your build assets (`projects.<your-project-name>.architect.build.options.assets`) and to your test assets (`projects.<your-project-name>.architect.test.options.assets`).
+<StepIndicator step='2'>If you used npm or yarn to install the elements, you need to change `angular.json` manually.
+Add the following to your build assets (`projects.<your-project-name>.architect.build.options.assets`) and to your test assets (`projects.<your-project-name>.architect.test.options.assets`).</StepIndicator>
 
 ```json angular.json
 // ...
@@ -35,12 +39,15 @@ Add the following to your build assets (`projects.<your-project-name>.architect.
 }
 // ...
 ```
+</MenuSection>
 
-## Import the Module `InoElementsModule`
+<MenuSection title='Importing Modules'>
+
+<StepIndicator step='3'>Import the Module `InoElementsModule`</StepIndicator>
 
 The components we provide in the Angular project are wrapped in Angular directives within an Angular library.
 All the `@Input` properties and `@Output` events of our components are included.
-This allows your IDE and compiler to infer all the type information from the given interfaces which is compulsive for code completion to work properly.
+This allows your IDE and compiler to infer all the type information from the given interfaces which is essential for code completion to work properly.
 
 To use the inovex Elements, you need to integrate the `InoElementsModule` into one of your App's modules. To do so, follow these steps:
 
@@ -72,7 +79,9 @@ export class AppModule {}
 If you have more than one module, you should integrate the `InoElementsModule` into each module that is supposed to use the inovex Elements.
 Alternatively, you can also integrate the components into a shared module.
 This way, you only need to import the components once (recommended).
+</MenuSection>
 
-## Use the Components
+<MenuSection title='Use the Components'>
 
 That's it. You are now ready to use our components.
+</MenuSection>
