--- a/packages/landingpage/mdx/getting-started/react-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/react-guide.mdx
@@ -2,7 +2,6 @@ import {CH} from '@code-hike/mdx/components';
 import Image from 'next/image';
 import Hint from "components/getting-started/hint";
 import StepIndicator from 'components/getting-started/stepIndicator';
-import TableShadow from "components/getting-started/tableShadow";
 import MenuSection from "components/getting-started/menuSection";
 
 
@@ -31,12 +30,13 @@ import MenuSection from "components/getting-started/menuSection";
     src={`/login-form.png`}
     alt="A screenshot of the login form"
     style={{
+      display: 'block',
       height: 'auto',
       width: '100%',
       maxWidth: '420px',
       borderRadius: '12px',
       boxShadow: '2px 2px 8px 3px rgba(0, 0, 0, 0.14)',
-      margin: '80px 0 0',
+      margin: '60px auto 0',
     }}
   />
 
@@ -47,7 +47,13 @@ import MenuSection from "components/getting-started/menuSection";
 
   ```bash
   npx create-react-app <your app name>
+  ```
+
+  ```bash
   cd <your app name>
+  ```
+
+  ```bash
   npm start
   ```
 
@@ -74,7 +80,8 @@ import MenuSection from "components/getting-started/menuSection";
   <Hint>Hint: For the Styling and Structure of your App we recommend following along with the provided [codesandbox](https://codesandbox.io/s/github/inovex/elements-example-react).</Hint>
 
 
-  To demonstrate how fast you can create a stylish login form, let's start with our sign in, consisting of two input fields for the credentials and one button to submit.
+    <StepIndicator step='4'>To demonstrate how fast you can create a stylish login form, let's start with our sign in, consisting of two input fields for the credentials and one button to submit.</StepIndicator>
+
   ```tsx App.js
     // ...
     return (
@@ -107,8 +114,6 @@ import MenuSection from "components/getting-started/menuSection";
     Every component has a variety of powerful and unique properties. They are listed and explained in each component **Playground**:
 
 
-  <TableShadow>
-
   | Name             | Description                                                                                                | Type                                                                                              | Default    |
   | ---------------- | ---------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------- | ---------- |
   | `type`           | The type of this element (default = text).                                                                 | `various | text`                                                                                 | `'text'`   |
@@ -120,14 +125,13 @@ import MenuSection from "components/getting-started/menuSection";
   | `show-label-hint`| If true, an _optional_ message is displayed if not required, otherwise a \* marker is displayed if required.| `boolean`                                                                                         | `undefined`|
   | `value`          | The value of this input field.                                                                             | `string`                                                                                          | `''`       |
 
-  </TableShadow>
 
 
     <Hint>Hint: These are some of the properties of the `<InoInput>` component.</Hint>
 
     The Playground allows you to modify these properties and see the result in real time. Additionally, we provide examples about the usage of each component with its given properties.
 
-      <StepIndicator step='4'>Following up on our login-form, we add a type and value property, setting it to a state object named _email_. Do the same for the password `<InoInput>`.</StepIndicator>
+      <StepIndicator step='5'>Following up on our login-form, we add a type and value property, setting it to a state object named _email_. Do the same for the password `<InoInput>`.</StepIndicator>
 
     ```tsx
     const [email, setEmail] = React.useState('');
@@ -156,9 +160,9 @@ import MenuSection from "components/getting-started/menuSection";
   With the exact same approach, we use **Events**. They emit a certain value when the user does something that triggers our Event to fire. In other terms: Our event gives us a **reaction** to an **action** made by our User.
   In case of our `<InoInput>` the action is the user typing and our events reaction contains the typed input.
 
-  Let's give our login form the `valueChange` event of the `<InoInput>` component, so that we can store the value typed by the user into our email or password states.
+  <StepIndicator step='6'>Let's give our login form the `valueChange` event of the `<InoInput>` component, so that we can store the value typed by the user into our email or password states.</StepIndicator>
 
-  <TableShadow>
+  
 
 | Event             | Description                                                                    | Type                   |
 | ----------------- | ------------------------------------------------------------------------------ | ---------------------- |
@@ -167,14 +171,14 @@ import MenuSection from "components/getting-started/menuSection";
 | inoFocus      | Emits when the input field is focused                                          | CustomEvent\<void>   |
 
 
-  </TableShadow>
+  
   ```tsx
   <InoInput
       type="email"
       label="email"
       outline
       value={email}
-      valueChange={value => setEmail(value.detail)}
+      onValueChange={value => setEmail(value.detail)}
   ></InoInput>
 
   <InoInput
@@ -182,24 +186,25 @@ import MenuSection from "components/getting-started/menuSection";
       label="password"
       outline
       value={password}
-      valueChange={value => setPassword(value.detail)}
+      onValueChange={value => setPassword(value.detail)}
   ></InoInput>
   ```
 
-  <Hint>Hint: while in our Playground the Event is called `valueChange`, we name it `valueChange` inside of our `<InoInput>`. The reason for this is that we want to accomodate our naming similar to the react-way of naming events (e.g. onClick)</Hint>
+  <Hint>Hint: while in our Playground the Event is called `valueChange`, we name it `onValueChange` inside of our `<InoInput>`. The reason for this is that we want to accomodate our naming similar to the react-way of naming events (e.g. onClick)</Hint>
 
   ## Slots
 
-  Many components of the inovex Elements Library have **slots**, that can be filled by other components or your own content to further customize its functionality or appearance.
-  If we use the slots of the `<InoInput>` we can add an `<InoIcon>` inside our input field, while retaining the full usability of the `<InoIcon>`.
+  Many components of the Elements Library have **slots**, that can be filled by other components or your own content to further customize its functionality or appearance.
+  
+  <StepIndicator step='7'>If we use the slots of the `<InoInput>` we can add an `<InoIcon>` inside our input field, while retaining the full usability of the `<InoIcon>`.</StepIndicator>
 
-  <TableShadow>
+  
 | Slot                | Description                  |
 | ------------------- | ---------------------------- |
 | icon-leading  | For the icon to be prepended |
 | **icon-trailing** | For the icon to be appended  |
 
-  </TableShadow>
+  
   <Hint>Hint: We can choose the position of our slot, that will render the `<InoIcon>` component. Other components like the `<InoCard>` allow a `header`, `content`, `footer` approach of positioning its slots.</Hint>
 
   ```tsx
@@ -208,7 +213,7 @@ import MenuSection from "components/getting-started/menuSection";
     label="password"
     outline
     value={password}
-    valueChange={(value) => setPassword(value.detail)}
+    onValueChange={(value) => setPassword(value.detail)}
   >
     <InoIcon slot="icon-trailing" icon="password"></InoIcon>
   </InoInput>
@@ -233,7 +238,7 @@ import MenuSection from "components/getting-started/menuSection";
 
   Let's apply what we learned by the example of the `<InoInput>` on other inovex Elements components to finalize our login-page.
 
-  ### Add a Logo
+  <StepIndicator step='8'> Add a Logo</StepIndicator>
 
   <Hint>Hint: automatically style your logo with rounded borders by using the `rounded` property of `<InoImg>`</Hint>
 
@@ -250,9 +255,11 @@ import MenuSection from "components/getting-started/menuSection";
 
   If our image can't be loaded, it will render an `<InoIcon icon="cloud">` due to the `fallbackIcon="cloud"` property.
 
-  ### Use Popovers on Components
+  <StepIndicator step='9'> Use Popovers on Components.  The `<InoPopover>` component is perfect for additional information or hints.</StepIndicator>
 
-  The `<InoPopover>` component is perfect for additional information or hints.
+  Make sure the `id` of the hosting element and the `for` property of the attached `<InoPopover>` is the same.
+  Given the intention or background of your page, it is helpful to change the `placement`(`top`, `right`, `bottom`, `left`).
+  Use the `interactive` property if you want to interact with the popover content (e.g. button clicks).
 
   ```tsx
   <InoButton id="sign-up">Sign Up</InoButton>
@@ -265,13 +272,7 @@ import MenuSection from "components/getting-started/menuSection";
   </InoPopover>
   ```
 
-  Make sure the `id` of the hosting element and the `for` property of the attached `<InoPopover>` is the same.
-  Given the intention or background of your page, it is helpful to change the `placement`(`top`, `right`, `bottom`, `left`).
-  Use the `interactive` property if you want to interact with the popover content (e.g. button clicks).
-
-  ### Toggle Password Visibility
-
-  By clicking on the ino icon lock, we can toggle the visibility of our password by changing the InoInput `type` property.
+  <StepIndicator step='10'> Toggle Password Visibility. By clicking on the ino icon lock, we can toggle the visibility of our password by changing the InoInput `type` property.</StepIndicator>
 
   ```tsx
   const [hidePassword, setVisibility] = React.useState<InputType>('password');
@@ -291,7 +292,7 @@ import MenuSection from "components/getting-started/menuSection";
     label="password"
     outline
     value={password}
-    valueChange={(value) => setPassword(value.detail)}
+    onValueChange={(value) => setPassword(value.detail)}
   >
     <InoIcon
       slot="icon-trailing"
@@ -302,10 +303,8 @@ import MenuSection from "components/getting-started/menuSection";
   </InoInput>
   ```
 
-  ### Add Notifications
-
-  Most components have built in styles and themes you can choose from. Let's add a different Notification, every time our user signs in.
-  If the credentials are too short, we use the property `type="error"` of the `<InoSnackbar>` to indicate a failed login attempt. In the case of a succesful login, we can use `type="success"`
+  <StepIndicator step='11'> Add Notifications. Most components have built in styles and themes you can choose from. Let's add a different Notification, every time our user signs in.
+  If the credentials are too short, we use the property `type="error"` of the `<InoSnackbar>` to indicate a failed login attempt. In the case of a succesful login, we can use `type="success"`</StepIndicator>
 
   ```tsx
   const [showSnackbar, setSnackbar] = React.useState(false);
@@ -331,7 +330,7 @@ import MenuSection from "components/getting-started/menuSection";
           type="success"
           stay-visible-on-hover="false"
         >
-          Sucessfully logged in
+          Successfully logged in
         </InoSnackbar>
       );
     } else {
@@ -367,7 +366,7 @@ import MenuSection from "components/getting-started/menuSection";
   Change the types accordingly to your wishes. The timeout property is in _ms_ and indicates when the snackbar disappears. The timeout can be disabled by setting it to a negative value.
   More about the properties of the InoSnackbar is documented [here](https://elements.inovex.de/version/v7.1.0/?path=/docs/notification-ino-snackbar--playground).
 
-  ### Display Login Alternatives
+  <StepIndicator step='12'>Display Login Alternatives</StepIndicator>
 
   ```tsx
   <InoTab icon="mail" indicator-content-width="false" stacked>
