--- a/packages/storybook/src/stories/ino-accordion/ino-accordion.stories.mdx
+++ b/packages/storybook/src/stories/ino-accordion/ino-accordion.stories.mdx
@@ -1,6 +1,9 @@
-import { Meta, Description } from "@storybook/addon-docs";
+import { Meta, Description, Story, Canvas } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-accordion/readme.md";
 
-<Meta title="Structure/ino-accordion/Documentation" />
 
-<Description markdown={readme} />
+<Meta title="ino-accordion/Documentation" />
+
+<Canvas>
+  <Description markdown={readme} />
+</Canvas>
