--- a/packages/storybook/src/stories/ino-autocomplete/ino-autocomplete.stories.mdx
+++ b/packages/storybook/src/stories/ino-autocomplete/ino-autocomplete.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-autocomplete/readme.md";
 
-<Meta title="Input/ino-autocomplete/Documentation" />
+{/* <Meta title="ino-autocomplete/Documentation" /> */}
 
-<Description markdown={readme} />
+
+    <Description markdown={readme} />
