--- a/packages/storybook/src/stories/ino-carousel/ino-carousel.stories.mdx
+++ b/packages/storybook/src/stories/ino-carousel/ino-carousel.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-carousel/readme.md";
 
-<Meta title="Graphic/ino-carousel/Documentation" />
+{/* <Meta title="Graphic/ino-carousel/Documentation" /> */}
 
 <Description markdown={readme} />
