--- a/packages/storybook/src/stories/ino-datepicker/ino-datepicker.stories.mdx
+++ b/packages/storybook/src/stories/ino-datepicker/ino-datepicker.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-datepicker/readme.md";
 
-<Meta title="Input/ino-datepicker/Documentation" />
+{/* <Meta title="Input/ino-datepicker/Documentation" /> */}
 
 <Description markdown={readme} />
