--- a/packages/storybook/src/stories/ino-fab-set/ino-fab-set.stories.mdx
+++ b/packages/storybook/src/stories/ino-fab-set/ino-fab-set.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-fab-set/readme.md";
 
-<Meta title="Buttons/ino-fab-set/Documentation" />
+{/* <Meta title="Buttons/ino-fab-set/Documentation" /> */}
 
 <Description markdown={readme} />
