--- a/packages/storybook/src/stories/ino-fab/ino-fab.stories.mdx
+++ b/packages/storybook/src/stories/ino-fab/ino-fab.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-fab/readme.md";
 
-<Meta title="Buttons/ino-fab/Documentation" />
+{/* <Meta title="Buttons/ino-fab/Documentation" /> */}
 
 <Description markdown={readme} />
