--- a/packages/storybook/src/stories/ino-list/ino-list.stories.mdx
+++ b/packages/storybook/src/stories/ino-list/ino-list.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-list/readme.md";
 
-<Meta title="Structure/ino-list/Documentation" />
+{/* <Meta title="Structure/ino-list/Documentation" /> */}
 
 <Description markdown={readme} />
