--- a/packages/storybook/src/stories/ino-progress-bar/ino-progress-bar.stories.mdx
+++ b/packages/storybook/src/stories/ino-progress-bar/ino-progress-bar.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-progress-bar/readme.md";
 
-<Meta title="Notification/ino-progress-bar/Documentation" />
+{/* <Meta title="Notification/ino-progress-bar/Documentation" /> */}
 
 <Description markdown={readme} />
