--- a/packages/storybook/src/stories/ino-snackbar/ino-snackbar.stories.mdx
+++ b/packages/storybook/src/stories/ino-snackbar/ino-snackbar.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-snackbar/readme.md";
 
-<Meta title="Notification/ino-snackbar/Documentation" />
+{/* <Meta title="Notification/ino-snackbar/Documentation" /> */}
 
 <Description markdown={readme} />
