--- a/packages/storybook/src/stories/ino-switch/ino-switch.stories.mdx
+++ b/packages/storybook/src/stories/ino-switch/ino-switch.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-switch/readme.md";
 
-<Meta title="Input/ino-switch/Documentation" />
+{/* <Meta title="Input/ino-switch/Documentation" /> */}
 
 <Description markdown={readme} />
