--- a/packages/storybook/src/stories/ino-textarea/ino-textarea.stories.mdx
+++ b/packages/storybook/src/stories/ino-textarea/ino-textarea.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-textarea/readme.md";
 
-<Meta title="Input/ino-textarea/Documentation" />
+{/* <Meta title="Input/ino-textarea/Documentation" /> */}
 
 <Description markdown={readme} />
