--- a/packages/storybook/src/stories/ino-tooltip/ino-tooltip.stories.mdx
+++ b/packages/storybook/src/stories/ino-tooltip/ino-tooltip.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import readme from "../../../../elements/src/components/ino-tooltip/readme.md";
 
-<Meta title="Notification/ino-tooltip/Documentation" />
+{/* <Meta title="Notification/ino-tooltip/Documentation" /> */}
 
 <Description markdown={readme} />
