--- a/packages/storybook/src/stories/ino-accordion/ino-accordion.stories.mdx
+++ b/packages/storybook/src/stories/ino-accordion/ino-accordion.stories.mdx
@@ -1,9 +1,5 @@
-import { Meta, Description, Story, Canvas } from "@storybook/addon-docs";
-import readme from "../../../../elements/src/components/ino-accordion/readme.md";
+import { Meta, Description, Story, Canvas } from '@storybook/addon-docs';
+import readme from '../../../../elements/src/components/ino-accordion/readme.md';
 
-
-<Meta title="ino-accordion/Documentation" />
-
-<Canvas>
-  <Description markdown={readme} />
-</Canvas>
+{/* <Meta title="ino-accordion/Documentation" /> */}
+<Description markdown={readme} />
