--- a/packages/storybook/src/stories/docs/framework-integration/vue-instructions.stories.mdx
+++ b/packages/storybook/src/stories/docs/framework-integration/vue-instructions.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Docs/Framework Integration/Vue" />
+<Meta title={"Docs/Framework Integration/Vue"} />
 
 # Integrate with Vue.js (as Web Components)
 > We set up a demo project with Vue.js (v3) to show you how to integrate the components into a newly generated Vue.js
@@ -8,7 +8,7 @@ import { Meta } from "@storybook/addon-docs";
 
 ## Vue.js 3
 
-Please follow these steps for integration into Vue.js(>= 3.0.0):
+Please follow these steps for integration into Vue.js(3.0.0 or later):
 
 ### 0) Prepare your Project
 Before using `@inovex.de/elements-vue`, you should make sure that your current setup works and boots properly.
@@ -64,14 +64,14 @@ export default {
 ```
 
 ## Vue.js 2
-Please follow these steps for integration into Vue.js(<= 2.x.x):
+Please follow these steps for integration into Vue.js(2.x.x and earlier):
 
 ### 0) Prepare your Project
 Before using `@inovex.de/elements`, you should make sure that your current setup works and boots properly.
 If this is the case, proceed to the next step.
 
 ### 1) Install `@inovex.de/elements`
-> Hint: We do not provide an integration package for Vue.js(<= 2.x.x) as we do for Angular and React.
+> Hint: We do not provide an integration package for Vue.js(2.x.x and earlier) as we do for Angular and React.
 > Vue.js works out-of-the box with Web Components as Vue.js respects the DOM API standards.
 
 Add the package `@inovex.de/elements` to your project using **npm**:
