--- a/packages/landingpage/translations/locales/en/library.json
+++ b/packages/landingpage/translations/locales/en/library.json
@@ -1,3 +1,13 @@
 {
-    "title": "components"
+  "designPatterns": {
+    "header": {
+      "top": "Efficient Development",
+      "title": "Design Patterns",
+      "subtitle": "Elevate your project with our lovingly crafted design patterns, optimized for web development. The inovex Elements collection, seamlessly integrated, empowers you to build responsive and visually appealing user interfaces with ease. Our commitment to quality ensures each pattern is meticulously designed for modern web applications."
+    },
+    "loginPattern": {
+      "title": "Login Pattern",
+      "description": "Welcome users with a Login design that's both intuitive and visually engaging."
+    }
+  }
 }
