feat: add a requirement tag for pattern previewBox

--- a/packages/landingpage/translations/locales/de/library.json
+++ b/packages/landingpage/translations/locales/de/library.json
@@ -5,6 +5,10 @@
       "title": "Design Patterns",
       "subtitle": "Bereichern Sie Ihre Projekte mit unseren sorgfältig entwickelten Design-Patterns, die speziell für die Anforderungen der Webentwicklung konzipiert sind. Die inovex Elements Kollektion ermöglicht Ihnen, reaktionsstarke und ästhetisch ansprechende Benutzeroberflächen mühelos zu erstellen. Unsere Hingabe zur Qualität garantiert, dass jedes Pattern präzise für moderne Webapplikationen gestaltet wird."
     },
+    "tag": {
+      "js": "Benötigt JS",
+      "html": "Benötigt HTML"
+    },
     "loginPattern": {
       "title": "Login Pattern",
       "description": "Empfangen Sie Nutzer mit einem Login-Design, das sowohl benutzerfreundlich als auch optisch überzeugend ist."
