refactor: better wording

--- a/packages/landingpage/translations/locales/de/library.json
+++ b/packages/landingpage/translations/locales/de/library.json
@@ -3,7 +3,7 @@
     "header": {
       "top": "Effiziente Entwicklung",
       "title": "Design Patterns",
-      "subtitle": "Bereichern Sie Ihre Projekte mit unseren sorgfältig entwickelten Design-Patterns, die speziell für die Anforderungen der Webentwicklung konzipiert sind. Die inovex Elements Kollektion ermöglicht Ihnen, reaktionsstarke und ästhetisch ansprechende Benutzeroberflächen mühelos zu erstellen. Unsere Hingabe zur Qualität garantiert, dass jedes Pattern präzise für moderne Webapplikationen gestaltet wird."
+      "subtitle": "Bereichern Sie Ihre Projekte mit unseren sorgfältig entwickelten Design-Patterns, die speziell für die Anforderungen der Webentwicklung konzipiert sind. Die inovex Elements Webkomponenten ermöglicht Ihnen, zusammen mit Tailwind CSS, ästhetisch ansprechende Benutzeroberflächen mühelos zu erstellen. Unsere Hingabe zur Qualität garantiert, dass jedes Pattern präzise für moderne Webapplikationen gestaltet wird."
     },
     "tag": {
       "js": "Benötigt JS",
