--- a/packages/landingpage/mdx/getting-started/vue-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/vue-guide.mdx
@@ -1,15 +1,15 @@
 import {CH} from '@code-hike/mdx/components';
+import { InoNavMenuSection } from '@inovex.de/elements-react';
 import StepIndicator from 'components/getting-started/stepIndicator';
-import MenuSection from "components/getting-started/menuSection";
 
 # Integrate with Vue.js
 
-<MenuSection title="Integrate with Vue.js 3">
+<InoNavMenuSection sectionName="Integrate with Vue.js 3">
 
   Please follow these steps for integration into Vue.js(>= 3.0.0):
 
-</MenuSection>
-<MenuSection title="Install @inovex.de/elements-vue">
+</InoNavMenuSection>
+<InoNavMenuSection sectionName="Install @inovex.de/elements-vue">
 
   <StepIndicator step="1">Add the package `@inovex.de/elements-vue` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
@@ -21,9 +21,9 @@ import MenuSection from "components/getting-started/menuSection";
     ```
   </CH.Code>
 
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Prepare the Project">
+<InoNavMenuSection sectionName="Prepare the Project">
   <CH.Section>
   <StepIndicator step="2">[Import the elements module](focus://2) and [use it in your app](focus://6).</StepIndicator>
 
@@ -38,9 +38,9 @@ import MenuSection from "components/getting-started/menuSection";
 
   ```
   </CH.Section>
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Ready for use">
+<InoNavMenuSection sectionName="Ready for use">
 
   As the integration is now complete, you can use the components in your project in the same way you would use any other Vue.js component.
   Here is an example:
@@ -62,13 +62,13 @@ import MenuSection from "components/getting-started/menuSection";
   }
   ```
   </CH.Code>
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Integrate with Vue.js 2">
+<InoNavMenuSection sectionName="Integrate with Vue.js 2">
   Please follow these steps for integration into Vue.js(2.x.x):
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Install @inovex.de/elements">
+<InoNavMenuSection sectionName="Install @inovex.de/elements">
 
   <StepIndicator step="1">Add the package `@inovex.de/elements` to your project using **npm** or **yarn**:</StepIndicator>
   <CH.Code>
@@ -79,9 +79,9 @@ import MenuSection from "components/getting-started/menuSection";
     yarn add @inovex.de/elements
     ```
   </CH.Code>
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Prepare the Project for Vue.js 2">
+<InoNavMenuSection sectionName="Prepare the Project for Vue.js 2">
   <StepIndicator step="2">Before you start using the components, you need to prepare the project.</StepIndicator>
   
   <CH.Section>
@@ -107,9 +107,9 @@ import MenuSection from "components/getting-started/menuSection";
   });
   ```
   </CH.Section>
-</MenuSection>
+</InoNavMenuSection>
 
-<MenuSection title="Use the Components">
+<InoNavMenuSection sectionName="Use the Components">
 
   You can now use the components in your Vue.js 2 project in the same way you would use any native HTML element.
-</MenuSection>
+</InoNavMenuSection>
