refactor: restructure menuSection to include subheaders from mdx guides

--- a/packages/landingpage/mdx/getting-started/javascript-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/javascript-guide.mdx
@@ -22,8 +22,9 @@ Use the npm package manager if...
 - ... you already started building a single page application.
 - ... you plan to migrate a static website to a single page application.
 - ... you plan to start a new project.
+</MenuSection>
 
-### Install via package manager
+<MenuSection title='Install via package manager'>
 
 <StepIndicator step='1'>Add the package `@inovex.de/elements` to your project using **npm** or **yarn**:</StepIndicator>
 
