refactor(storybook): adjust toc config - edit headings in guides to show up in toc - remove toc from changelog & typography - toc doesn't select h3 in stories anymore - ino-accordion: add toc back in

--- a/packages/storybook/src/stories/docs/framework-integration/angular-instructions.stories.mdx
+++ b/packages/storybook/src/stories/docs/framework-integration/angular-instructions.stories.mdx
@@ -10,12 +10,12 @@ import { Meta } from "@storybook/addon-docs";
 >
 > These instructions are based on `angular@12.0.0` and [`angular-cli@12.0.0`](https://cli.angular.io/).
 
-## 0) Prepare your Project
+### 0) Prepare your Project
 
 Before using `@inovex.de/elements`, you should make sure that your current setup works and boots properly.
 If this is the case, proceed to the next step.
 
-## 1) Install `@inovex.de/elements-angular`
+### 1) Install `@inovex.de/elements-angular`
 
 We provide an integration layer package for Angular, so you can integrate the inovex Elements as an Angular library into your Angular project.
 
@@ -82,7 +82,7 @@ $ yarn add @inovex.de/elements-angular
   }
 ```
 
-## 2) Import the Module `InoElementsModule`
+### 2) Import the Module `InoElementsModule`
 
 The components we provide in the Angular project are wrapped in Angular directives within an Angular library.
 All the `@Input` properties and `@Output` events of our components are included.
@@ -122,6 +122,6 @@ import { AppComponent } from './app.component';
 export class AppModule {}
 ```
 
-## 3) Use the Components
+### 3) Use the Components
 
 To help you to get started, we created a [simple todo app](https://codesandbox.io/s/github/inovex/elements-example-angular) for you to play around with.
