--- a/packages/storybook/src/stories/docs/framework-integration/react-instructions.stories.mdx
+++ b/packages/storybook/src/stories/docs/framework-integration/react-instructions.stories.mdx
@@ -15,12 +15,12 @@ into your React project. The name of the package matches the name of the respect
 >
 > If you want to use TypeScript, please see instructions from the [Adding TypeScript Section on create-react-app.dev](https://facebook.github.io/create-react-app/docs/adding-typescript).
 
-## 0) Prepare your Project
+### 0) Prepare your Project
 
 Before using `@inovex.de/elements`, you should make sure that your current setup works and boots properly.
 If this is the case, proceed to the next step.
 
-## 1) Install `@inovex.de/elements-react`
+### 1) Install `@inovex.de/elements-react`
 
 Add the package `@inovex.de/elements-react` to your project using **npm**:
 
