refactor(landingpage|guides): add ino-nav-menu & sections to elmentsWrapper

--- a/packages/landingpage/mdx/getting-started/vue-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/vue-guide.mdx
@@ -1,5 +1,5 @@
 import {CH} from '@code-hike/mdx/components';
-import { InoNavMenuSection } from '@inovex.de/elements-react';
+import { InoNavMenuSection } from '@elements';
 import StepIndicator from 'components/getting-started/stepIndicator';
 
 # Integrate with Vue.js
