--- a/packages/landingpage/mdx/getting-started/javascript-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/javascript-guide.mdx
@@ -1,6 +1,5 @@
 import {CH} from '@code-hike/mdx/components';
-import { InoNavMenuSection } from '@inovex.de/elements-react';
-import Hint from "components/getting-started/hint";
+import { InoNavMenuSection } from '@elements';
 import StepIndicator from 'components/getting-started/stepIndicator';
 
 # Integrate with Javascript
