--- a/packages/landingpage/mdx/getting-started/react-guide.mdx
+++ b/packages/landingpage/mdx/getting-started/react-guide.mdx
@@ -1,5 +1,5 @@
 import {CH} from '@code-hike/mdx/components';
-import { InoNavMenuSection } from '@inovex.de/elements-react';
+import { InoNavMenuSection } from '@elements';
 import Image from 'next/image';
 import Hint from "components/getting-started/hint";
 import StepIndicator from 'components/getting-started/stepIndicator';
