ci: remove old commit scope file

--- a/packages/storybook/src/stories/docs/contributing/07-commit-message-format.stories.mdx
+++ b/packages/storybook/src/stories/docs/contributing/07-commit-message-format.stories.mdx
@@ -64,7 +64,7 @@ Here are some of the allowed scopes:
 - `storybook|ino-card`
 - `*`
 
-> You can always check which package/scope combinations are allowed by checking the [scopes in the semantic.yml](https://github.com/inovex/elements/blob/master/.github/semantic.yml#L15) file.
+> You can always check which package/scope combinations are allowed by checking the [scopes in our action](https://github.com/inovex/elements/blob/master/.github/workflows/semantic-pull-request.yml#L34) file.
 
 ## Subject
 
