refactor: split attributes

--- a/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
+++ b/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
@@ -29,35 +29,65 @@ Our typography system is designed to establish clear hierarchies, promote readab
 **Weight:** Regular (400)  
 **Sizes:** Small (12px), Medium (14px), Large (16px)  
 
-<Typeset fontSizes={[12, 14, 16]} fontWeight={typography.weight.regular} sampleText={SampleText} fontFamily={typography.type.primary} />
+<Typeset
+  fontSizes={[12, 14, 16]}
+  fontWeight={typography.weight.regular}
+  sampleText={SampleText}
+  fontFamily={typography.type.primary}
+/>
+
 
 ### Labels
 **Purpose:** Text for UI components and captions  
 **Weight:** Medium (500)  
 **Sizes:** Small (10px), Medium (12px), Large (14px)  
 
-<Typeset fontSizes={[10, 12, 14]} fontWeight={typography.weight.medium} sampleText={SampleText} fontFamily={typography.type.primary} />
+<Typeset
+  fontSizes={[10, 12, 14]}
+  fontWeight={typography.weight.medium}
+  sampleText={SampleText}
+  fontFamily={typography.type.primary}
+/>
+
 
 ### Titles
 **Purpose:** Headings for sections and content divisions  
 **Weight:** Bold (600)   
 **Sizes:** Small (14px), Medium (16px), Large (20px)  
 
-<Typeset fontSizes={[14, 16, 20]} fontWeight={typography.weight.bold} sampleText={SampleText} fontFamily={typography.type.primary} />
+<Typeset
+  fontSizes={[14, 16, 20]}
+  fontWeight={typography.weight.bold}
+  sampleText={SampleText}
+  fontFamily={typography.type.primary}
+/>
+
 
 ### Headlines
 **Purpose:** Attention-grabbing text for key information  
 **Weight:** Regular (400)   
 **Sizes:** Small (25px), Medium (28px), Large (32px)   
 
-<Typeset fontSizes={[25, 28, 32]} fontWeight={typography.weight.regular} sampleText={SampleText} fontFamily={typography.type.primary} />
+<Typeset
+  fontSizes={[25, 28, 32]}
+  fontWeight={typography.weight.regular}
+  sampleText={SampleText}
+  fontFamily={typography.type.primary}
+/>
+
 
 ### Display
 **Purpose:** Impactful text for banners and large displays  
 **Weight:** Extrabold (700)  
 **Sizes:** Small (40px), Medium (51px), Large (64px)  
 
-<Typeset fontSizes={[40, 51, 64]} fontWeight={typography.weight.extrabold} sampleText={SampleText} fontFamily={typography.type.primary} />
+<Typeset
+  fontSizes={[40, 51, 64]}
+  fontWeight={typography.weight.extrabold}
+  sampleText={SampleText}
+  fontFamily={typography.type.primary}
+/>
+
 
 ### Font Sizes
 Our font sizes from 10px to 64px.
